# rotor-noise-analysis

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
doc/: 旋翼噪声定常非定常载荷分离技术方案.md  源项频域贡献量化分析使用手册.md  相位约束法分离详细实施方案.md
script/: merge_signal.py
script/plot_script/: freqdomain_load_ff_Case05-Case01_global.py  freqdomain_thickness_ff_Case05-Case01_global.py  freqdomain_total_ff_Case05-Case01_global.py  harmonic_contribution_Case04_global.py  harmonics_load_ff_Case03-Case01_global.py  harmonics_load_ff_Case04-Case01_global.py  harmonics_load_ff_Case05-Case01_global.py  harmonics_thickness_ff_Case05-Case01_global.py  harmonics_total_ff_Case05-Case01_global.py  sph_load_ff_Case03-Case01_global.py  sph_load_ff_Case04-Case01_global.py  sph_load_ff_Case05-Case01_global.py
src/: analysis_cases.py  analysis_cases01.py  analysis_source_cases.py  analysis_source_cases01.py  ff_signal.py  merge_signal.py  signal_utils.py
src/analyzer/: analyzer.py  rough_surface_filter.py  source_analyzer.py  utils.py
src/decomposition/: __init__.py  contribution.py  cyclic_spectrum.py  frequency.py  phase_constraint.py
src/pipelines/: cyclic_spectrum_ff.py  cyclic_spectrum_ffsr.py  decomposition_ff.py  decomposition_ffsr.py  preprocess_ff.py  preprocess_ffsr.py  spectral_ff.py  spectral_ffsr.py
src/plot_script/: freqdomain_ff_Case05-Case01_global.py  harmonics_ff_Case03_Case01_global.py  harmonics_ff_Case04_Case01_global.py  harmonics_ff_Case05-Case01_global.py  harmonics_total_ff_Case03-Case01_global.py  harmonics_total_ff_Case04-Case01_global.py  plot_config.json  (+3 more)
(+3 files in other folders)
